<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userprofile.UserProfileActivity">

    <RelativeLayout
        android:id="@+id/usersProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/icon_to_go_back_to_previous_screen"
            android:src="@drawable/ic_vector_back" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/text_color"
            android:transitionName="username"
            android:textSize="@dimen/profile_header_username_text_size_"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersProfileToolbar">

        <ScrollView
            android:id="@+id/profileScrollContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="?attr/actionBarSize"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usersProfileToolbar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="@dimen/profile_detail_image_size"
                    android:layout_height="@dimen/profile_detail_image_size"
                    android:layout_marginTop="@dimen/margin_16"
                    android:scaleType="centerCrop"
                    android:transitionName="profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
                    app:srcCompat="@drawable/bg_circle" />

                <TextView
                    android:id="@+id/tvFollowers"
                    style="@style/ProfileDetailFollowTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvFollowing"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@id/guideline4"
                    tools:text="Followers:113" />

                <TextView
                    android:id="@+id/tvFollowing"
                    style="@style/ProfileDetailFollowTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="@id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/ivUserProfile"
                    tools:text="Following: 58" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@color/divider_color"
                    app:layout_constraintEnd_toEndOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

                <TextView
                    android:id="@+id/tvNameLabel"
                    style="@style/ProfileDetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/divider1" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/ProfileDetailTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvNameLabel"
                    app:layout_constraintEnd_toEndOf="@+id/guideline5"
                    app:layout_constraintStart_toEndOf="@+id/tvNameLabel"
                    tools:text="mayurg" />

                <TextView
                    android:id="@+id/tvCompanyLabel"
                    style="@style/ProfileDetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCompany"
                    app:layout_constraintStart_toStartOf="@+id/tvNameLabel" />

                <TextView
                    android:id="@+id/tvCompany"
                    style="@style/ProfileDetailTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintEnd_toEndOf="@+id/guideline5"
                    app:layout_constraintStart_toEndOf="@+id/tvCompanyLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvName"
                    tools:text="Tawk.to" />

                <TextView
                    android:id="@+id/tvBlogLabel"
                    style="@style/ProfileDetailTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blog"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvBlog"
                    app:layout_constraintStart_toStartOf="@+id/tvCompanyLabel" />

                <TextView
                    android:id="@+id/tvBlog"
                    style="@style/ProfileDetailTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintEnd_toEndOf="@+id/guideline5"
                    app:layout_constraintStart_toEndOf="@+id/tvBlogLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompany"
                    tools:text="www.tawk.com" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@color/divider_color"
                    app:layout_constraintEnd_toEndOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/tvBlogLabel" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNoteInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:hint="@string/note"
                    app:boxStrokeColor="@color/note_box_et_backgroud_selector"
                    app:hintTextColor="@color/amber"
                    app:layout_constraintEnd_toEndOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/divider2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:maxLines="5"
                        android:minLines="3"
                        android:textCursorDrawable="@drawable/et_cursor" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@drawable/button_bg"
                    android:paddingStart="@dimen/padding_24"
                    android:paddingTop="@dimen/padding_8"
                    android:paddingEnd="@dimen/padding_24"
                    android:paddingBottom="@dimen/padding_8"
                    android:text="@string/save"
                    android:textColor="@color/btn_text_color"
                    android:textSize="@dimen/btn_save_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilNoteInput" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.10" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.90" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLoadingUserProfileLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/shimmer_placeholder_activity_user_profile" />

    </com.facebook.shimmer.ShimmerFrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>